Cope with Unixes that don't have LOG_PERROR, like Solaris 10

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=39987
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>